[package]
name = "marks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features=["derive"]}
serde_json = "*"
actix-web = "*"
rayon = "*"
atomic_float = "*"
double = "0.2.4"
